--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-redux-toolkit",
+  "name": "banjul-mall",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
@@ -13,6 +13,7 @@
     "firebase": "^8.6.1",
     "firebase-admin": "^9.8.0",
     "next": "latest",
+    "next-auth": "^4.22.1",
     "next-images": "^1.8.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -20,9 +21,10 @@
     "react-responsive-carousel": "^3.2.23"
   },
   "license": "MIT",
+  "private": true,
   "devDependencies": {
-    "autoprefixer": "^10.2.5",
-    "postcss": "^8.2.15",
-    "tailwindcss": "^2.1.2"
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.1"
   }
 }
