--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "next": "latest",
     "next-auth": "^4.22.1",
     "next-images": "^1.8.5",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "7.2.2",
     "react-responsive-carousel": "^3.2.23"
   },
