--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "7.2.2",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "styled-components": "^5.3.10"
   },
   "license": "MIT",
   "private": true,
@@ -28,3 +29,4 @@
     "tailwindcss": "^3.3.1"
   }
 }
+
