--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "7.2.2",
     "react-responsive-carousel": "^3.2.23",
-    "styled-components": "^5.3.10"
+    "styled-components": "^5.3.10",
+    "ua-parser-js": "^1.0.35"
   },
   "license": "MIT",
   "private": true,
@@ -29,4 +30,3 @@
     "tailwindcss": "^3.3.1"
   }
 }
-
