--- a/package.json
+++ b/package.json
@@ -7,26 +7,27 @@
     "start": "next start"
   },
   "dependencies": {
-    "@heroicons/react": "v1",
-    "@reduxjs/toolkit": "1.5.0",
-    "@tailwindcss/line-clamp": "^0.2.0",
-    "firebase": "^8.6.1",
-    "firebase-admin": "^9.8.0",
-    "next": "latest",
+    "@reduxjs/toolkit": "1.9.5",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "firebase": "^9.21.0",
+    "formik": "^2.2.9",
+    "next": "13.3.1",
     "next-auth": "^4.22.1",
     "next-images": "^1.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "7.2.2",
+    "react-icons": "^4.8.0",
+    "react-redux": "8.0.5",
     "react-responsive-carousel": "^3.2.23",
-    "styled-components": "^5.3.10",
-    "ua-parser-js": "^1.0.35"
+    "ua-parser-js": "^1.0.35",
+    "uuid": "^9.0.0",
+    "yup": "^1.1.1"
   },
   "license": "MIT",
   "private": true,
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
-    "tailwindcss": "^3.3.1"
+    "tailwindcss": "^3.3.2"
   }
 }
