--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "13.3.1",
     "next-auth": "^4.22.1",
     "next-images": "^1.8.5",
+    "nextjs-progressbar": "^0.0.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
