--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "firebase": "^9.21.0",
     "formik": "^2.2.9",
+    "framer-motion": "^10.12.10",
     "next": "13.3.1",
     "next-auth": "^4.22.1",
     "next-images": "^1.8.5",
@@ -21,7 +22,7 @@
     "react-redux": "8.0.5",
     "react-responsive-carousel": "^3.2.23",
     "ua-parser-js": "^1.0.35",
-    "uuid": "^9.0.0",
+    "ulid": "^2.3.0",
     "yup": "^1.1.1"
   },
   "license": "MIT",
